# bgl

./: CMakeLists.txt  LICENSE  README.md  atom_mapping.py  bgl_wrapper.cpp  mcgregor.py  test_bgl.py
bgl/: atom_mapping.py  mcgregor.py
bgl/src/: CMakeLists.txt  bgl_wrapper.cpp
